<resources>
    <string name="app_name">BeeSocial</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="emailaddress">Email Address</string>
    <string name="click_here_to_register">Click here to Register</string>
    <string name="click_here_to_login">Click Here to Login</string>
    <string name="username">Username</string>
    <string name="click_here_to_finish_registration">Click Here To Finish Registration</string>
    <string name="login">Login</string>
    <string name="new_users">New Users</string>
    <string name="forgot_login">Forgot Login?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="beesociallogo">BeeSocialLogo</string>
    <string name="title_activity_menu">menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
