<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_createEvent">

    <fragment
        android:id="@+id/nav_createEvent"
        android:name="com.example.beesocial.ui.createEvent.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_createEvent" />

    <fragment
        android:id="@+id/nav_editEvent"
        android:name="com.example.beesocial.ui.editEvent.EditFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_editEvent" />

    <fragment
        android:id="@+id/nav_chats"
        android:name="com.example.beesocial.ui.chats.ChatsFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_chats" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.beesocial.ui.settings.SettingsFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.beesocial.ui.logout.LogoutFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_logout" />
</navigation>