<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">


    <ImageView
        android:layout_width="403dp"
        android:layout_height="173dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/bee"
        android:contentDescription="@string/beesociallogo" />

    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/name"
        android:hint="@string/emailaddress"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no"
        android:drawableStart="@drawable/name" />

    <EditText
        android:id="@+id/password"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/password"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:drawableStart="@drawable/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginRedirect"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#57616B"
        android:text="@string/login"
        android:textColor="#FFEC8B"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/registrationRedirect"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="15dp"
            android:text="@string/new_users"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textview_forgetlogin"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/forgot_login"
            android:textStyle="bold"
            android:layout_marginStart="30dp" />
    </LinearLayout>
</LinearLayout>